# DS776

./: .gitignore  CLAUDE.md  COCALC_TESTING.md  DS776  NEXT_SESSION.md  README.md  analyze_course_content_storage.py  backup_to_gdrive.sh  homework_content_storage.csv  homework_processor  lessons_content_storage.csv  setup_nightly_sync.sh  sync_bidirectional.sh
Developer/: NEXT_SESSION.md  TODO.md  Tracker.xlsx
Homework/: generate_homework_utilities.py
Lessons/Course_Tools/introdl/: pyproject.toml
Lessons/Course_Tools/introdl/docs/: Makefile  REGENERATION_INSTRUCTIONS.md  build_docs.sh
Lessons/Course_Tools/introdl/docs/source/: conf.py  index.rst
Lessons/Course_Tools/introdl/docs/source/api/: core_utilities.rst  storage_utilities.rst  training_functions.rst  visualization_functions.rst
Lessons/Course_Tools/introdl/docs/source/examples/: common_patterns.rst  lesson_examples.rst
Lessons/Course_Tools/introdl/src/introdl/: __init__.py  generation.py  idlmam.py  nlp.py  notebook_states.py  openrouter_models.json  paths.py  storage.py  summarization.py  utils.py  visul.py
Lessons/Course_Tools/introdl/src/introdl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Lessons/Course_Tools/introdl/src/introdl/idlmam/: idlmam.py
Lessons/Course_Tools/introdl/src/introdl/nlp/: __init__.py  generation.py  nlp.py  summarization.py
Lessons/Course_Tools/introdl/src/introdl/utils/: __init__.py  path_utils.py  storage_utils.py  utils.py
Lessons/Course_Tools/introdl/src/introdl/visul/: visul.py
downloads/: stored_tokens  token
tmp/: winny_response.md
(+234 files in other folders)
