[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "introdl"
dynamic = ["version"]
description = "Introductory Deep Learning Package"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "accelerate",
    "bert_score",
    "bertviz",
    "bitsandbytes>=0.45.3",
    "datasets",
    "dill>=0.3.8",
    "dotenv",
    "evaluate",
    "google-genai",
    "IPython",
    "ipywidgets",
    "ipycanvas",
    "kagglehub",
    "matplotlib",
    "nbformat",
    "nbconvert",
    "numpy<2.0",
    "openai>=1.65.5",
    "pandas",
    "protobuf",
    "pycocotools",
    "pyperclip",
    "rapidfuzz",
    "rouge_score",
    "scikit-learn",
    "scipy",
    "seaborn",
    "segmentation_models_pytorch",
    "seqeval",
    "spacy",
    "timm",
    "torch>=2.8.0",
    "torchinfo",
    "torchmetrics",
    "torchvision>=0.23.0",
    "tqdm",
    "transformers>=4.49.0",
    "ultralytics"
]

[tool.setuptools]
package-dir = {"" = "src"}  # Tell setuptools where to find your packages
packages = {find = {where = ["src"]}}  # Use find directive for package discovery

[tool.setuptools.dynamic]
version = {attr = "introdl.__version__"}  # Get version from __init__.py
